# arena-calibration

./: .gitignore  README.md  exercise_project_model_fixtures.py  exercise_verifier.py  pyproject.toml
arena/: __init__.py  api_llm.py  cli_llm.py  fixtures.py  lanham.py  llm.py  patch_eq.py  project_model_fixtures.py  runner.py  scorer.py  verifier.py
docs/plans/: 2026-05-28-cli-llm-wrappers.md  2026-05-28-low-cost-api-providers.md  2026-05-30-dspy-gepa-prompt-evolution.md  2026-05-31-pytest-collection-fix.md  2026-06-06-project-model-v1-calibration.md
docs/prompts/: 2026-05-31-indeterminate-patch-comparisons-investigation.md
docs/schemas/: project-model-v1.schema.json.sha256  project-model-v1.schema.source.yaml
docs/specs/: 2026-05-30-dspy-gepa-prompt-evolution.md
docs/verification/: 2026-05-28-opus-plan-review.meta.json  2026-05-28-opus-plan-review.stdout.json  2026-05-30-opus-dspy-gepa-final-review.md  2026-05-30-opus-dspy-gepa-final-review.meta.json  2026-05-30-opus-dspy-gepa-final-review.stdout.json  2026-05-30-opus-dspy-gepa-postpatch-review.md  2026-05-30-opus-dspy-gepa-postpatch-review.meta.json  2026-05-30-opus-dspy-gepa-postpatch-review.stdout.json  2026-05-30-opus-dspy-gepa-research-review.md  2026-05-30-opus-dspy-gepa-research-review.meta.json  2026-05-30-opus-dspy-gepa-research-review.stdout.json  (+4 more)
scripts/: generate_project_model_v1_fixtures.py
tests/: test_api_llm.py  test_cli_llm.py  test_coverage_edges.py  test_project_model_fixtures.py  test_prompt_optimization.py  test_runner_api_provider.py  test_runner_cli_provider.py
(+108 files in other folders)
