[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-calibration"
version = "0.0.1"
description = "Calibration harness for build-arena Verifier and Scorer"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["arena"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.setuptools]
packages = ["arena"]
